# homebrew-neural-network

./: .clang-format  .gitignore  CMakeLists.txt
scripts/: convert.py  infer.py  mlp.py
src/: main.cc  mlp.cc  mlp.h
src/utils/: log.h  mnist.h  timer.h
